syntax = "proto3";

package greet;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetingManyTimesResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

message DeadlineGreetRequest {
    string name = 1;
}

message DeadlineGreetResponse {
    string result = 1;
}

service GreetingService {
    // unary
    rpc Greet (GreetingRequest) returns (GreetingResponse) {}

    // server streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetingManyTimesResponse) {}

    // client streaming
    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {}

    // bidi streaming
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}

    // deadline and error
    rpc DeadlineGreeting (DeadlineGreetRequest) returns (DeadlineGreetResponse) {}
}